--- a/Customers/MainPage.xaml
+++ b/Customers/MainPage.xaml
@@ -8,6 +8,54 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid Margin="10,20,10,20">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="10*"/>
+                <RowDefinition Height="2*"/>
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Adventure works customers" VerticalAlignment="Center" Height="75" Width="618" FontSize="50" Grid.RowSpan="2"/>
+            <Grid Grid.Row="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="4*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="20"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="20"/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="20"/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Row="0" Grid.Column="1" x:Name="textBlock1" HorizontalAlignment="Center" TextWrapping="Wrap" Text="ID" VerticalAlignment="Center" Height="30" Width="30" FontSize="20" RenderTransformOrigin="15.498,0.81"/>
+                <TextBlock Grid.Row="0" Grid.Column="3" x:Name="textBlock2" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Title" VerticalAlignment="Center" FontSize="20" RenderTransformOrigin="-3.275,1.061"/>
+                <TextBlock Grid.Row="0" Grid.Column="5" x:Name="textBlock3" HorizontalAlignment="Center" TextWrapping="Wrap" Text="First Name" VerticalAlignment="Center" FontSize="20"/>
+                <TextBlock Grid.Row="0" Grid.Column="7" x:Name="textBlock4" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Last Name" VerticalAlignment="Center" FontSize="20"/>
+                <TextBox x:Name="id" HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="" VerticalAlignment="Center" IsReadOnly="True" FontSize="20" Grid.Column="1" Grid.Row="1"/>
+                <TextBox x:Name="firstName" HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="" VerticalAlignment="Center" FontSize="20" Grid.ColumnSpan="2" Grid.Column="5" Grid.Row="1"/>
+                <TextBox x:Name="lastName" HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="" VerticalAlignment="Center" FontSize="20" Grid.ColumnSpan="2" Grid.Column="7" Grid.Row="1"/>
+                <ComboBox x:Name="title" HorizontalAlignment="Stretch" VerticalAlignment="Center" FontSize="20" Grid.Column="3" Grid.Row="1">
+                    <ComboBoxItem Content="Mr"/>
+                    <ComboBoxItem Content="Mrs"/>
+                    <ComboBoxItem Content="Ms"/>
+                    <ComboBoxItem Content="Miss"/>
+                </ComboBox>
+                <TextBlock x:Name="textBlock5" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Email" VerticalAlignment="Center" FontSize="20" Grid.Column="1" Grid.Row="4" Margin="43,0,59,48"/>
+                <TextBox x:Name="email" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="400" FontSize="20" Grid.ColumnSpan="5" Grid.Column="3" Grid.Row="3" Grid.RowSpan="2"/>
+                <TextBlock x:Name="textBlock6" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Phone" VerticalAlignment="Center" FontSize="20" Grid.Column="1" Grid.Row="5"/>
+                <TextBox x:Name="phone" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Bottom" Width="200" FontSize="20" Grid.ColumnSpan="3" Grid.Column="3" Grid.Row="4" Grid.RowSpan="2"/>
+            </Grid>
+        </Grid>
 
     </Grid>
 </Page>
