--- a/Customers/MainPage.xaml
+++ b/Customers/MainPage.xaml
@@ -50,10 +50,10 @@
                     <ComboBoxItem Content="Ms"/>
                     <ComboBoxItem Content="Miss"/>
                 </ComboBox>
-                <TextBlock x:Name="textBlock5" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Email" VerticalAlignment="Center" FontSize="20" Grid.Column="1" Grid.Row="4" Margin="43,0,59,48"/>
-                <TextBox x:Name="email" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="400" FontSize="20" Grid.ColumnSpan="5" Grid.Column="3" Grid.Row="3" Grid.RowSpan="2"/>
+                <TextBlock x:Name="textBlock5" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Email" VerticalAlignment="Center" FontSize="20" Grid.Column="1" Grid.Row="3"/>
+                <TextBox x:Name="email" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="400" FontSize="20" Grid.ColumnSpan="5" Grid.Column="3" Grid.Row="3"/>
                 <TextBlock x:Name="textBlock6" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Phone" VerticalAlignment="Center" FontSize="20" Grid.Column="1" Grid.Row="5"/>
-                <TextBox x:Name="phone" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Bottom" Width="200" FontSize="20" Grid.ColumnSpan="3" Grid.Column="3" Grid.Row="4" Grid.RowSpan="2"/>
+                <TextBox x:Name="phone" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="200" FontSize="20" Grid.ColumnSpan="3" Grid.Column="3" Grid.Row="5"/>
             </Grid>
         </Grid>
 
